--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/chgouthamraj/Monitoring#readme",
   "dependencies": {
     "express": "^5.1.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "response-time": "^2.3.4"
   }
 }
