--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "prom-client": "^15.1.3",
-    "response-time": "^2.3.4"
+    "response-time": "^2.3.4",
+    "winston": "^3.17.0",
+    "winston-loki": "^6.1.3"
   }
 }
